# chupa

./: .clang-format  .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.ninja  chupa  chupa.cbp  cmake_install.cmake  environment_obj.h  main.cpp  player.h  sfmltest
.cmake/api/v1/reply/: cache-v2-1a4108c620b7c7f8bdee.json  cache-v2-e8020b472e56b337f361.json  cmakeFiles-v1-39b2dd3680e4cbfc174b.json  cmakeFiles-v1-89c5558c75addddf28d3.json  codemodel-v2-b151c31e9ccdff0ecdda.json  codemodel-v2-e3146f06f89baba2e31b.json  directory-.-Debug-8d57938e798cc8819bc0.json  index-2022-12-16T08-01-13-0885.json  index-2022-12-17T07-08-59-0195.json  target-chupa-Debug-365a3bba709e8202b4ee.json  target-chupa-Debug-c6e2383014fd1c6f10a6.json
gameclasses/: KALGOVNA.frag  environment_obj.cpp  fireball.cpp  fireball.h  game.cpp  game.h  game_obj.cpp  game_obj.h  player.cpp  player.h  target.cpp  target.h  texture_handler.cpp  texture_handler.h
